--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Sam Bisbee <sam@sbisbee.com> (http://www.sbisbee.com)",
   "name": "pandoc",
   "description": "A wrapper around the pandoc tool.",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "homepage": "https://github.com/sbisbee/node-pandoc",
   "repository": {
     "type": "git",
@@ -10,7 +10,7 @@
   },
   "main": "pandoc",
   "engines": {
-    "node": "0.4.x | 0.5.x"
+    "node": ">= 0.4.0"
   },
   "dependencies": {},
   "devDependencies": {}
